--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=fragments-of-insight
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://fragments-of-insight.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
@@ -12,9 +12,11 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/Elhary/Obsidian-Minimal-Edge/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
